font, not working, idk why?

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: interRegular;
+  src: url(..\font\static\Inter-Regular.ttf);
+}
 body{
     background-color: #FFE4CF;
+    font-family: interRegular;
 }
