font working, wuhuuu

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: interRegular;
-  src: url(..\font\static\Inter-Regular.ttf);
+  src: url(../font/static/Inter-Regular.ttf);
 }
 body{
     background-color: #FFE4CF;
