--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -6,9 +6,44 @@
     --background-secondary: #FFE4CF;
     --accent-color: #38703E;
     --text-color: #4E2323;
+    --error-color: #ce555b
 }
 
 body {
     background-color: var(--background-secondary);
     font-family: Inter, sans-serif;
+}
+
+.error {
+    background-color: var(--error-color);
+    position: absolute;
+    padding: 1rem;
+    max-width: 100vw;
+    bottom: 1rem;
+    animation: whoosh 1.25s;
+    left: 1rem;
+    overflow-wrap: break-word;
+
+    b {
+        font-weight: 600;
+        font-size: 14pt;
+    }
+
+    p {
+        font-weight: normal;
+        font-size: 12pt;
+
+    }
+}
+
+@keyframes whoosh {
+    from {
+        opacity: 0;
+        left: -100%;
+    }
+
+    to {
+        opacity: 1;
+        left: 1rem;
+    }
 }
