--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -23,17 +23,17 @@ body {
     animation: whoosh 1.25s;
     left: 1rem;
     overflow-wrap: break-word;
+}
 
-    b {
-        font-weight: 600;
-        font-size: 14pt;
-    }
+.error b {
+    font-weight: 600;
+    font-size: 14pt;
+}
 
-    p {
-        font-weight: normal;
-        font-size: 12pt;
+.error p {
+    font-weight: normal;
+    font-size: 12pt;
 
-    }
 }
 
 @keyframes whoosh {
