--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,49 +1,38 @@
 @import "fonts.css";
 @import "reset.css";
-
-:root {
-    --background-primary: #FFEEE0;
-    --background-secondary: #FFE4CF;
-    --accent-color: #38703E;
-    --text-color: #4E2323;
-    --error-color: #ce555b
-}
-
 body {
-    background-color: var(--background-secondary);
-    font-family: Inter, sans-serif;
+  background-color: #FFE4CF;
+  font-family: Inter, sans-serif;
 }
 
 .error {
-    background-color: var(--error-color);
-    position: absolute;
-    padding: 1rem;
-    max-width: 100vw;
-    bottom: 1rem;
-    animation: whoosh 1.25s;
-    left: 1rem;
-    overflow-wrap: break-word;
+  background-color: #ce555b;
+  position: absolute;
+  padding: 1rem;
+  max-width: 100vw;
+  bottom: 1rem;
+  animation: whoosh 1.25s;
+  left: 1rem;
+  overflow-wrap: break-word;
 }
-
 .error b {
-    font-weight: 600;
-    font-size: 14pt;
+  font-weight: 600;
+  font-size: 14pt;
 }
-
 .error p {
-    font-weight: normal;
-    font-size: 12pt;
-
+  font-weight: normal;
+  font-size: 12pt;
 }
 
 @keyframes whoosh {
-    from {
-        opacity: 0;
-        left: -100%;
-    }
-
-    to {
-        opacity: 1;
-        left: 1rem;
-    }
+  from {
+    opacity: 0;
+    left: -100%;
+  }
+  to {
+    opacity: 1;
+    left: 1rem;
+  }
 }
+
+/*# sourceMappingURL=main.css.map */
