--- a/src/assets/styles/sass/main.scss
+++ b/src/assets/styles/sass/main.scss
@@ -1,7 +1,14 @@
 @import "../fonts.css";
 @import "../reset.css";
+
+$background-primary: #FFEEE0;
+$background-secondary: #FFE4CF;
+$accent-color: #38703E;
+$text-color: #4E2323;
+$error-color: #ce555b;
+
 body {
-  background-color: #FFE4CF;
+  background-color: $background-secondary;
   font-family: Inter, sans-serif;
 }
 
@@ -15,14 +22,15 @@ body {
 
 header {
   grid-column: 1/13;
+  img {
+    width: 200pt;
+  }
+
 }
 
-header img {
-  width: 200pt;
-}
 
 .error {
-  background-color: #ce555b;
+  background-color: $error-color;
   position: absolute;
   padding: 1rem;
   max-width: 100vw;
@@ -30,16 +38,17 @@ header img {
   animation: whoosh 1.25s;
   left: 1rem;
   overflow-wrap: break-word;
-}
 
-.error b {
-  font-weight: 600;
-  font-size: 14pt;
-}
+  b {
+    font-weight: 600;
+    font-size: 14pt;
+  }
 
-.error p {
-  font-weight: normal;
-  font-size: 12pt;
+  p {
+    font-weight: normal;
+    font-size: 12pt;
+
+  }
 }
 
 @keyframes whoosh {
@@ -47,11 +56,9 @@ header img {
     opacity: 0;
     left: -100%;
   }
+
   to {
     opacity: 1;
     left: 1rem;
   }
 }
-
-
-/*# sourceMappingURL=main.css.map */
