--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -13,12 +13,35 @@ body {
   margin-inline: auto;
 }
 
-header {
-  grid-column: 1/13;
+.text-small-semi > * {
+  font-weight: 600;
+  font-size: 14pt;
+  text-decoration: none;
+  color: #4E2323;
 }
 
+header {
+  grid-column: 1/13;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-block: 10pt;
+}
 header img {
   width: 200pt;
+}
+header nav ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  gap: 15px;
+  align-items: center;
+}
+header nav ul .profile-picture {
+  width: 40pt;
+  height: 40pt;
+  border-radius: 50%;
+  background-image: linear-gradient(#FFEEE0, #737373);
 }
 
 .error {
@@ -31,12 +54,10 @@ header img {
   left: 1rem;
   overflow-wrap: break-word;
 }
-
 .error b {
   font-weight: 600;
   font-size: 14pt;
 }
-
 .error p {
   font-weight: normal;
   font-size: 12pt;
@@ -52,6 +73,5 @@ header img {
     left: 1rem;
   }
 }
-
 
 /*# sourceMappingURL=main.css.map */
