--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -27,14 +27,17 @@ header {
   align-items: center;
   padding-block: 10pt;
 }
+
 header img {
   width: 200pt;
 }
+
 header nav {
   display: flex;
   align-items: center;
-  justify-content: end;
+  gap: 15px;
 }
+
 header nav ul {
   list-style-type: none;
   padding: 0;
@@ -42,6 +45,7 @@ header nav ul {
   gap: 15px;
   align-items: center;
 }
+
 header nav .profile-picture {
   display: inline-block;
   width: 40pt;
@@ -60,10 +64,12 @@ header nav .profile-picture {
   left: 1rem;
   overflow-wrap: break-word;
 }
+
 .error b {
   font-weight: 600;
   font-size: 14pt;
 }
+
 .error p {
   font-weight: normal;
   font-size: 12pt;
@@ -79,5 +85,6 @@ header nav .profile-picture {
     left: 1rem;
   }
 }
+
 
 /*# sourceMappingURL=main.css.map */
