--- a/src/assets/styles/sass/main.css
+++ b/src/assets/styles/sass/main.css
@@ -13,11 +13,41 @@ body {
   margin-inline: auto;
 }
 
+.text-small-semi > * {
+  font-weight: 600;
+  font-size: 14pt;
+  text-decoration: none;
+  color: #4E2323;
+}
+
 header {
   grid-column: 1/13;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-block: 10pt;
 }
 header img {
   width: 200pt;
+}
+header nav {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+header nav ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  gap: 15px;
+  align-items: center;
+}
+header nav .profile-picture {
+  display: inline-block;
+  width: 40pt;
+  height: 40pt;
+  border-radius: 50%;
+  background-image: linear-gradient(#FFEEE0, #737373);
 }
 
 .error {
