--- a/src/assets/styles/sass/main.scss
+++ b/src/assets/styles/sass/main.scss
@@ -41,7 +41,7 @@ header {
   nav {
     display: flex;
     align-items: center;
-    justify-content: end;
+    gap: 15px;
 
     ul {
       list-style-type: none;
