--- a/src/assets/styles/scss/abstracts/_fonts.scss
+++ b/src/assets/styles/scss/abstracts/_fonts.scss
@@ -1,20 +1,20 @@
 @font-face {
     font-family: Inter;
-    src: url(../../../fonts/Inter-Regular.ttf);
+    src: url(../fonts/Inter-Regular.ttf); // If the IDE shows an error IGNORE IT!!
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: Inter;
-    src: url(../../../fonts/Inter-Bold.ttf);
+    src: url(../fonts/Inter-Bold.ttf); // If the IDE shows an error IGNORE IT!!
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: Inter;
-    src: url(../../../fonts/Inter-SemiBold.ttf);
+    src: url(../fonts/Inter-SemiBold.ttf); // If the IDE shows an error IGNORE IT!!
     font-weight: 600;
     font-style: normal;
 }
