--- a/src/assets/styles/scss/abstracts/_variables.scss
+++ b/src/assets/styles/scss/abstracts/_variables.scss
@@ -1,6 +1,13 @@
+// COLORS //
+
 $background-primary: #FFEEE0;
 $background-secondary: #FFE4CF;
 $accent-color: #38703E;
 $text-color: #4E2323;
 $error-color: #ce555b;
+
+// OTHERS //
+
 $drop-shadow: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+
+$body-width: 80vw;
