--- a/src/assets/styles/scss/layouts/_header.scss
+++ b/src/assets/styles/scss/layouts/_header.scss
@@ -6,6 +6,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding-block: 10pt;
+  height: 80pt;
 
   img {
     width: 200pt;
