--- a/src/assets/styles/scss/books.scss
+++ b/src/assets/styles/scss/books.scss
@@ -1,14 +1,4 @@
-//Abstracts
-@import "abstracts/__abstracts-dir";
-
-//Base Styles
-@import "base/__base-dir";
-
-//Components
-@import "components/__components-dir";
-
-//Layout
-@import "layouts/__layouts-dir";
+@import "abstracts/variables";
 
 a[href="/books.php"] {
   font-weight: bold;
