--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -33,7 +33,7 @@ main {
   gap: 6pt;
 }
 
-.text-small-semi {
+.text-small-semi > * {
   font-weight: 600;
   font-size: 14pt;
   text-decoration: none;
@@ -72,10 +72,12 @@ main {
   left: 1rem;
   overflow-wrap: break-word;
 }
+
 .error b {
   font-weight: 600;
   font-size: 14pt;
 }
+
 .error p {
   font-weight: normal;
   font-size: 12pt;
@@ -263,21 +265,29 @@ table {
   display: inline-block;
 }
 
+.search-bar {
+  background-color: #FFEEE0;
+}
+
 header {
   grid-column: 1/13;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-block: 10pt;
+  height: 80pt;
 }
+
 header img {
   width: 200pt;
 }
+
 header nav {
   display: flex;
   align-items: center;
   gap: 15px;
 }
+
 header nav ul {
   list-style-type: none;
   padding: 0;
@@ -285,6 +295,7 @@ header nav ul {
   gap: 15px;
   align-items: center;
 }
+
 header nav .profile-picture {
   display: inline-block;
   width: 40pt;
@@ -301,12 +312,15 @@ footer {
   position: absolute;
   bottom: 0;
   width: 80vw;
+  height: 50pt;
 }
+
 footer nav {
   display: flex;
   align-items: center;
   gap: 15px;
 }
+
 footer nav ul {
   list-style-type: none;
   padding: 0;
@@ -314,5 +328,7 @@ footer nav ul {
   gap: 15px;
   align-items: center;
 }
+
+
 
 /*# sourceMappingURL=styles.css.map */
