--- a/src/assets/styles/scss/books.css
+++ b/src/assets/styles/scss/books.css
@@ -44,17 +44,6 @@ a[href="/books.php"] {
   text-indent: 4px;
   background-color: #FFEEE0;
   display: inline-block;
-  position: relative;
-}
-.search-container .dropdown .filter-container .filter::after {
-  content: "A";
-  font-size: 12pt;
-  color: #333;
-  margin-left: 5px;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 5px;
 }
 .search-container .dropdown .sort-container {
   display: block;
@@ -80,6 +69,4 @@ a[href="/books.php"] {
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   pointer-events: none;
-}
-
-/*# sourceMappingURL=books.css.map */
+}/*# sourceMappingURL=books.css.map */
