--- a/src/assets/styles/scss/books.scss
+++ b/src/assets/styles/scss/books.scss
@@ -28,83 +28,27 @@ a[href="/books.php"] {
       position: relative;
       margin-bottom: 20px;
       display: flex;
-      /* Use flexbox for layout */
       justify-content: center;
-      /* Center the search bar */
       width: 100%;
-      /* Ensure the container takes up the full width */
    }
 
    .dropdown {
-      display: inline;
+      display: inline-block;
       padding-top: 20px;
 
       .filter-container {
          display: block;
-      }
 
-      .filter {
-         border: 1px solid #ccc;
-         border-radius: 80px;
-         font-size: 14pt;
-         height: 25px;
-         background-color: $background-primary;
-         text-indent: 5px;
-         display: inline-block;
-         width: 12%;
-         padding-right: 20px;
-         /* Make room for the custom arrow */
-         position: relative;
-         /* Needed for absolute positioning of the pseudo-element */
-      }
-
-      .filter::after {
-         content: "▼";
-         position: absolute;
-         right: 10px;
-         /* Adjust the position as needed */
-         top: 50%;
-         transform: translateY(-50%);
-         border-left: 5px solid transparent;
-         border-right: 5px solid transparent;
-         border-top: 5px solid black;
-         /* Change the color as needed */
-         pointer-events: none;
-         /* Ensures the arrow does not interfere with the select element */
-      }
-
-   }
-
-   .dropdown {
-      display: inline;
-      padding-top: 20px;
-
-      .filter-container {
-         display: block;
-      }
-
-      .filter {
-         border: 1px solid #ccc;
-         border-radius: 80px;
-         font-size: 14pt;
-         height: 25px;
-         background-color: $background-primary;
-         text-indent: 5px;
-         display: inline-block;
-         width: 12%;
-         padding-right: 20px;
-         position: relative;
-      }
-
-      .filter::after {
-         content: "▼";
-         position: absolute;
-         right: 10px;
-         top: 50%;
-         transform: translateY(-50%);
-         border-left: 5px solid transparent;
-         border-right: 5px solid transparent;
-         pointer-events: none;
+         .filter {
+            border: 1px solid #ccc;
+            border-radius: 80px;
+            font-size: 14pt;
+            height: 25px;
+            width: 80px;
+            text-indent: 4px;
+            background-color: $background-primary;
+            display: inline-block;
+         }
       }
 
       .sort-container {
