--- a/src/assets/styles/scss/books.scss
+++ b/src/assets/styles/scss/books.scss
@@ -33,51 +33,34 @@ a[href="/books.php"] {
    }
 
    .dropdown {
-      display: inline-block;
-      padding-top: 20px;
+      padding-top: 10px;
 
       .filter-container {
-         display: block;
+         display: inline-block;
 
          .filter {
             border: 1px solid #ccc;
             border-radius: 80px;
-            font-size: 14pt;
+            font-size: small;
             height: 25px;
-            width: 80px;
+            width: fit-content;
             text-indent: 4px;
             background-color: $background-primary;
-            display: inline-block;
          }
       }
 
       .sort-container {
-         display: block;
-      }
-
-      .sort {
-         border: 1px solid #ccc;
-         border-radius: 80px;
-         font-size: 14pt;
-         height: 25px;
-         background-color: $background-primary;
-         text-indent: 5px;
          display: inline-block;
-         width: 12%;
-         padding-right: 20px;
-         position: relative;
-      }
 
-      .sort::after {
-         content: "▼";
-         position: absolute;
-         right: 10px;
-         top: 50%;
-         transform: translateY(-50%);
-         border-left: 5px solid transparent;
-         border-right: 5px solid transparent;
-         pointer-events: none;
+         .sort {
+            border: 1px solid #ccc;
+            border-radius:80px;
+            font-size: 14pt;
+            height: 25px;
+            width: fit-content;
+            text-indent: 4px;
+            background-color: $background-primary;
+         }
       }
-
    }
 }
