--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -40,6 +40,12 @@ main {
   color: #4E2323;
 }
 
+.text-small-semi-bold {
+  font-weight: bold;
+  font-size: 14pt;
+  color: #4E2323;
+}
+
 .text-small-semi > * {
   font-weight: 600;
   font-size: 14pt;
