--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -183,8 +183,7 @@ input,
 optgroup,
 textarea {
   -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
+  appearance: none;
   overflow: visible;
   border: 0;
   outline: 0;
@@ -331,4 +330,6 @@ footer nav ul {
   display: flex;
   gap: 15px;
   align-items: center;
-}/*# sourceMappingURL=styles.css.map */
+}
+
+/*# sourceMappingURL=styles.css.map */
