--- a/src/assets/styles/scss/home.css
+++ b/src/assets/styles/scss/home.css
@@ -16,4 +16,10 @@ main {
 
 #stoebern-button {
   margin-top: 30pt;
-}/*# sourceMappingURL=home.css.map */
+}
+
+.book-carousel {
+  grid-column: 1/13;
+}
+
+/*# sourceMappingURL=home.css.map */
