--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -23,6 +23,11 @@ body {
   margin-inline: auto;
 }
 
+* {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+}
+
 main {
   grid-column: 1/13;
 }
