SOoooo, now in boxes, image not right place. else working will fix later. need break. Also now is search is updated. Blättern not possible yet.

--- a/src/assets/styles/scss/books.css
+++ b/src/assets/styles/scss/books.css
@@ -62,6 +62,9 @@ a[href="/books.php"] {
 
 .result-container {
   grid-column: 1/13;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 6pt;
 }
 
 /*# sourceMappingURL=books.css.map */
