--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -1,340 +1,18 @@
-@font-face {
-  font-family: Inter;
-  src: url(../fonts/Inter-Regular.ttf);
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: Inter;
-  src: url(../fonts/Inter-Bold.ttf);
-  font-weight: bold;
-  font-style: normal;
-}
-@font-face {
-  font-family: Inter;
-  src: url(../fonts/Inter-SemiBold.ttf);
-  font-weight: 600;
-  font-style: normal;
-}
-body {
-  background-color: #FFE4CF;
-  font-family: Inter, sans-serif;
-  width: 80vw;
-  margin-inline: auto;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 3 | @import "book-info-box";
+ *   |         ^^^^^^^^^^^^^^^
+ *   '
+ *   components\__components-dir.scss 3:9  @import
+ *   styles.scss 10:9                      root stylesheet */
 
-* {
-  font-family: Inter, sans-serif;
-  font-style: normal;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 3 \2502  @import \"book-info-box\";\a   \2502          ^^^^^^^^^^^^^^^\a   \2575 \a   components\\__components-dir.scss 3:9  @import\a   styles.scss 10:9                      root stylesheet";
 }
-
-main {
-  grid-column: 1/13;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  gap: 6pt;
-}
-
-.text-small-normal {
-  font-weight: normal;
-  font-size: 12pt;
-  text-decoration: none;
-  color: #4E2323;
-}
-
-.text-small-semi-bold {
-  font-weight: bold;
-  font-size: 14pt;
-  color: #4E2323;
-}
-
-.text-small-semi > * {
-  font-weight: 600;
-  font-size: 14pt;
-  text-decoration: none;
-  color: #4E2323;
-}
-
-.text-large-bold {
-  font-weight: bold;
-  font-size: 28pt;
-  color: #4E2323;
-  margin-block: 2pt;
-}
-
-.text-medium-normal {
-  font-weight: normal;
-  font-size: 20pt;
-  color: #4E2323;
-  margin-block: 2pt;
-}
-
-.large-container {
-  grid-column: 2/12;
-  background-color: #FFEEE0;
-  padding: 40pt 80pt;
-  border-radius: 15pt;
-  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
-}
-
-.error {
-  background-color: #ce555b;
-  position: absolute;
-  padding: 1rem;
-  max-width: 100vw;
-  bottom: 1rem;
-  animation: whoosh 1.25s;
-  left: 1rem;
-  overflow-wrap: break-word;
-}
-.error b {
-  font-weight: 600;
-  font-size: 14pt;
-}
-.error p {
-  font-weight: normal;
-  font-size: 12pt;
-}
-
-@keyframes whoosh {
-  from {
-    opacity: 0;
-    left: -100%;
-  }
-  to {
-    opacity: 1;
-    left: 1rem;
-  }
-}
-/**
-Diese Datei ist nicht selbstgeschrieben.
-Quelle: https://github.com/danilowoz/wipe.css
-*/
-/**
- * 1. Always reset this sucks.
- * 2. Inherit from default setting
- */
-* {
-  margin: 0; /* 1 */
-  padding: 0; /* 1 */
-  border: 0; /* 1 */
-  background-repeat: no-repeat; /* 1 */
-  box-sizing: inherit; /* 2 */
-}
-
-/**
- * 1. Prevent certain mobile browsers from automatically zooming fonts.
- * 2. Border box sizing
- * 3. Default scroll behavior (not smooth)
- */
-html {
-  -ms-text-size-adjust: 100%; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 1 */
-  box-sizing: border-box; /* 2 */
-  scroll-behavior: auto; /* 3 */
-}
-
-/**
- * 1. Set default font styles
- * 2. Beautiful fonts again
- * 3. Prevent horizontal scroll
- */
-body {
-  font-size: 16px; /* 1 */
-  -moz-osx-font-smoothing: grayscale; /* 2 */
-  -webkit-font-smoothing: antialiased; /* 2 */
-}
-
-/**
- * All Headings look the same
- */
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-size: 1em;
-  font-weight: normal;
-}
-
-/**
- * 1. Reset link styles
- * 2. Sized links
- * 3. Remove the gray background on active links in IE 10.
- */
-a {
-  text-decoration: none; /* 1 */
-  color: inherit; /* 1 */
-  display: inline-block; /* 2 */
-  background-color: transparent; /* 3 */
-}
-
-/**
- * No bullets anymore
- */
-ol,
-ul {
-  list-style: none;
-}
-
-/**
- * Remove all default styles and all elements look the same
- */
-button,
-input,
-optgroup,
-textarea {
-  -webkit-appearance: none;
-  appearance: none;
-  overflow: visible;
-  border: 0;
-  outline: 0;
-  font: inherit;
-  -webkit-font-smoothing: inherit;
-  letter-spacing: inherit;
-  color: inherit;
-  background: none;
-  vertical-align: top;
-}
-
-/**
- * Avoid no background on Edge and IE
- */
-option {
-  background-color: inherit;
-}
-
-/**
- * Set a color on active state
- */
-a:active,
-button:active {
-  color: inherit;
-}
-
-/**
- * Prevent chrome autofill style
- */
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  -webkit-transition: "color 9999s ease-out, background-color 9999s ease-out";
-  -webkit-transition-delay: 9999s;
-}
-
-/**
- * You should define size for textarea
- */
-textarea {
-  resize: none;
-}
-
-/**
- * Pointer cursor for buttons
- */
-input[type=button],
-button {
-  cursor: pointer;
-}
-
-/**
- * Pointer default for disabled buttons
- */
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-
-/**
- * 1. Remove space after each image
- * 2. Ensure responsive images
- * 3. Remove the border on images inside links in IE 10.
- */
-img {
-  display: block; /* 1 */
-  max-width: 100%; /* 2 */
-  height: auto; /* 2 */
-  border-style: none; /* 3 */
-}
-
-/**
- * Collapse border spacing
- */
-table {
-  border-collapse: collapse;
-}
-
-.big-button {
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 20pt;
-  color: #FFEEE0;
-  background-color: #38703E;
-  border-radius: 50vh;
-  padding: 5pt 10pt;
-  display: inline-block;
-}
-
-.search-bar {
-  background-color: #FFEEE0;
-}
-
-header {
-  grid-column: 1/13;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-block: 10pt;
-  height: 80pt;
-}
-header img {
-  width: 200pt;
-}
-header nav {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-header nav ul {
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  gap: 15px;
-  align-items: center;
-}
-header nav .profile-picture {
-  display: inline-block;
-  width: 40pt;
-  height: 40pt;
-  border-radius: 50%;
-  background-image: linear-gradient(#FFEEE0, #737373);
-}
-
-footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-block: 10pt;
-  position: absolute;
-  bottom: 0;
-  width: 80vw;
-  height: 50pt;
-}
-footer nav {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-footer nav ul {
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  gap: 15px;
-  align-items: center;
-}
-
-/*# sourceMappingURL=styles.css.map */
