--- a/src/assets/styles/scss/layouts/_footer.scss
+++ b/src/assets/styles/scss/layouts/_footer.scss
@@ -5,10 +5,11 @@ footer {
   justify-content: space-between;
   align-items: center;
   padding-block: 10pt;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: $body-width;
   height: 50pt;
+  z-index: 2;
 
   nav {
     display: flex;
