--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -90,10 +90,12 @@ main {
   left: 1rem;
   overflow-wrap: break-word;
 }
+
 .error b {
   font-weight: 600;
   font-size: 14pt;
 }
+
 .error p {
   font-weight: normal;
   font-size: 12pt;
@@ -328,14 +330,17 @@ header {
   padding-block: 10pt;
   height: 80pt;
 }
+
 header img {
   width: 200pt;
 }
+
 header nav {
   display: flex;
   align-items: center;
   gap: 15px;
 }
+
 header nav ul {
   list-style-type: none;
   padding: 0;
@@ -343,6 +348,7 @@ header nav ul {
   gap: 15px;
   align-items: center;
 }
+
 header nav .profile-picture {
   display: inline-block;
   width: 40pt;
@@ -356,16 +362,19 @@ footer {
   justify-content: space-between;
   align-items: center;
   padding-block: 10pt;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 80vw;
   height: 50pt;
+  z-index: 2;
 }
+
 footer nav {
   display: flex;
   align-items: center;
   gap: 15px;
 }
+
 footer nav ul {
   list-style-type: none;
   padding: 0;
@@ -373,5 +382,7 @@ footer nav ul {
   gap: 15px;
   align-items: center;
 }
+
+
 
 /*# sourceMappingURL=styles.css.map */
