--- a/src/assets/styles/scss/components/_book-info-box.scss
+++ b/src/assets/styles/scss/components/_book-info-box.scss
@@ -1,4 +1,5 @@
 .book-info-box {
+  margin-top: 10px;
   grid-column: span 3;
   padding: 10px;
   border-radius: 15pt;
@@ -6,32 +7,36 @@
   height: 315px;
   background-color: $background-primary;
   position: relative;
-  display: inline-block;
-}
 
-.book-info-box p {
-  text-decoration: none;
-  font-weight: normal;
-  font-size: 12pt;
-  position: relative;
-  z-index: 2;
-}
+  .info-text {
+    position: absolute;
+    z-index: 2;
+    padding: 10px;
+    bottom: 0;
 
-.book-info-box h2 {
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 20pt;
-  position: relative;
-  z-index: 2;
-}
+    p {
+      text-decoration: none;
+      font-weight: normal;
+      font-size: 12pt;
+      position: relative;
 
-.book-info-box img {
-  width: auto;
-  max-height: 100%;
-  border-radius: 15pt;
-  position: absolute;
-  padding: 10px 10px 30px 10px; /* Top, Right, Bottom, Left */
-  z-index: 1;
-  background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+    }
 
+    h2 {
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 20pt;
+      position: relative;
+    }
+  }
+
+    img {
+      width: calc(100% - 20px);
+      height: calc(100% - 80px);
+      padding-bottom: 0;
+      border-radius: 15pt;
+      position: absolute;
+      z-index: 1;
+      background: linear-gradient(to bottom, rgba(252, 81, 71, 1) 100%, rgba(255, 238, 224, 1) 100%);
+    }
 }
