--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -152,7 +152,6 @@ body {
  * All Headings look the same
  */
 h1,
-h2,
 h3,
 h4,
 h5 {
@@ -284,6 +283,7 @@ table {
 }
 
 .book-info-box {
+  margin-top: 10px;
   grid-column: span 3;
   padding: 10px;
   border-radius: 15pt;
@@ -291,33 +291,35 @@ table {
   height: 315px;
   background-color: #FFEEE0;
   position: relative;
-  display: inline-block;
 }
 
-.book-info-box p {
+.info-text {
+  position: absolute;
+  z-index: 2;
+  padding: 10px;
+  bottom: 0;
+}
+.info-text p {
   text-decoration: none;
   font-weight: normal;
   font-size: 12pt;
   position: relative;
-  z-index: 2;
 }
-
-.book-info-box h2 {
+.info-text h2 {
   text-decoration: none;
   font-weight: bold;
   font-size: 20pt;
   position: relative;
-  z-index: 2;
 }
 
 .book-info-box img {
-  width: auto;
-  max-height: 100%;
+  width: calc(100% - 20px);
+  height: calc(100% - 80px);
+  padding-bottom: 0;
   border-radius: 15pt;
   position: absolute;
-  padding: 10px 10px 30px 10px; /* Top, Right, Bottom, Left */
   z-index: 1;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgb(255, 255, 255) 100%);
+  background: linear-gradient(to bottom, rgba(252, 81, 71, 0) 0%, rgb(255, 238, 224) 100%);
 }
 
 header {
