--- a/src/assets/styles/scss/books.scss
+++ b/src/assets/styles/scss/books.scss
@@ -78,8 +78,19 @@ a[href="/books.php"] {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   gap: 6pt;
+  .send-value-button {
+    border-radius: 15pt;
+    font-size: 11pt;
+    font-weight: 600;
+    color: $text-color;
+    background-color: $background-primary;
+    padding: 7pt 10pt;
+    filter: $drop-shadow;
+  }
+
 }
 .pagination {
+  grid-column: 4/10;
   margin-top: 20px;
   margin-bottom: 40pt;
   display: flex;
