--- a/src/assets/styles/scss/book.scss
+++ b/src/assets/styles/scss/book.scss
@@ -1,4 +1,36 @@
+@import "abstracts/variables";
+
+a[href="/books.php"] {
+  font-weight: bold;
+}
 .book-box {
+  padding: 6pt;
   grid-column: 4/10;
   margin-top: 40pt;
+  border-radius: 15pt;
+  background-color: $background-primary;
+  filter: $drop-shadow;
+  margin-bottom: 40pt;
+
+  img {
+    border-radius: 15pt;
+  }
+
+  h2 {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20pt;
+
+  }
+  p {
+    text-decoration: none;
+    font-weight: normal;
+    font-size: 12pt;
+    position: relative;
+
+  }
+  .line {
+    width: 100%;
+    color: black;
+  }
 }
